project(clangdep)
cmake_minimum_required(VERSION 3.10)

set(LLVM_INCLUDE_TESTS OFF CACHE INTERNAL "" FORCE)
set(LLVM_TARGETS_TO_BUILD "" CACHE INTERNAL "" FORCE)
set(CLANG_ENABLE_STATIC_ANALYZER OFF CACHE INTERNAL "" FORCE)
set(CLANG_ENABLE_ARCMT OFF CACHE INTERNAL "" FORCE)
set(LLVM_ENABLE_PROJECTS clang CACHE INTERNAL "" FORCE)
set(LLVM_EXTERNAL_CLANG_SOURCE_DIR ext/clang CACHE INTERNAL "" FORCE)
set(LLVM_TOOL_CLANG_TOOLS_EXTRA_BUILD ON CACHE INTERNAL "" FORCE)

add_subdirectory(ext/llvm)

# apply our patch to clang
execute_process(COMMAND git apply --directory=ext/clang ext/0001-Basic-PKY-attributes.patch WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})